# fastapi-jwt-resend-starter

./: .env.example  .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
app/: main.py  models.py  scheduler.py
app/api/: dependencies.py  exception_handlers.py  handlers.py  main.py
app/api/dependencies/: auth.py
app/api/routes/: auth.py  auth_routes.py  user_routes.py  users.py
app/core/: config.py  database.py  exceptions.py  messages.py  security.py
app/domain/: models.py
app/domain/exceptions/: auth_exceptions.py  base_exceptions.py  user_exceptions.py
app/domain/models/: access_token.py  refresh_token.py  user.py  verification_token.py
app/domain/services/: auth_service.py  user_service.py
app/email-templates/raw/: reset_password.txt  verify_email.txt
app/infrastructure/dao/: __init__.py  password_reset_token_dao.py  refresh_token_dao.py  user_dao.py  verification_token_dao.py
app/infrastructure/db/: init.py  models.py  session.py  utils.py
app/infrastructure/email/: mailer.py
app/infrastructure/security/: hashing.py  tokens.py
app/mappers/: refresh_token_mapper.py  user_mapper.py  verification_token_mapper.py
app/schemas/: auth.py  auth_dto.py  base.py  common.py  user.py  user_dto.py
app/services/: email_service.py  token_service.py  user_service.py
app/utils/: emails.py  mapper.py
scripts/: build-emails.sh  compile-mjml.sh  test.sh
tests/: conftest.py  factories.py
tests/api/routes/: test_auth.py  (+1 more)
tests/integration/: __init__.py  test_auth.py  test_users.py
tests/unit/: __init__.py
tests/utils/: user.py
(+23 files in other folders)
